<resources>
    <string name="app_name">P3_7s21</string>
    <string name="titulop1">Programando Android</string>
    <string name="descripimg1">Logo de fondo</string>
    <string name="titulop2">Menu de opciones</string>
    <string name="p2suma2num">Suma 2 numeros</string>
    <string name="p2resta2num">Resta 2 numeros</string>
    <string name="titulop3">Suma de 2 numeros</string>
    <string name="p3textnum1">Ingresa el primer numero</string>
    <string name="p3textnum1f">numero 1</string>
    <string name="p3textnum2">Ingresa el segundo numero</string>
    <string name="p3textnum2f">numero 2</string>
    <string name="p3btntext">Calcular</string>
    <string name="p3lbltext">Resultado de la suma</string>
    <string name="titulop4">Resta de 2 numeros</string>
    <string name="p4lbltext">Resultado de la resta</string>
</resources>